tests/negative/neg_write_to_constant_index.safe
-- Test: neg_write_to_constant_index
-- Description: Writes through an indexed part rooted in a constant object must be rejected.
-- Expected: REJECT write_to_constant

package Neg_Write_To_Constant_Index

   type Index is range 1 to 3;
   type Buffer is array (Index) of Integer;

   function Make_Buffer returns Buffer
      Result : Buffer;

      for I in Index
         Result (I) = Integer (I);

      return Result;

   function Run
      Data : constant Buffer = Make_Buffer;

      Data (1) = 0;

